--- a/build.gradle
+++ b/build.gradle
@@ -33,17 +33,16 @@ repositories {
 
 apply plugin: 'forge'
 
+version = project.mod_version
 group = mod_group
 archivesBaseName = mod_archive_name
 
 minecraft {
     runDir = "run"
-    version = "${minecraft_version}-${forge_version}"
+    version = minecraft_version + "-" + forge_version
     replaceIn mod_info_path
-    replace "@MAJOR@", major_version
-    replace "@MINOR@", minor_version
-    replace "@PATCH@", patch_version
-    replace "@FORGE_VERSION@", forge_version
+    replace "%MOD_VERSION%", mod_version
+    replace "%FORGE_VERSION%", forge_version
 }
 dependencies {
     compile "codechicken:CodeChickenLib:${minecraft_version}-${CCLIB_version}:dev"
@@ -51,29 +50,30 @@ dependencies {
     compile "codechicken:NotEnoughItems:${minecraft_version}-${NEI_version}:dev"
     compile "mcp.mobius.waila:Waila:${WAILA_version}_${minecraft_version}:dev"
     compile "net.industrial-craft:industrialcraft-2:${IC2_version}:dev"
-    compile ("appeng:appliedenergistics2:${AE2_version}:dev"){
-        transitive = false
-    }
+    compile "appeng:appliedenergistics2:${AE2_version}:dev"
 }
+
+def final_display_version = hasProperty("display_version") ? display_version : minecraft_version
+version = "${final_display_version}-${mod_version}.B${System.getenv("BUILD_NUMBER") ?: 0}"
 
 processResources {
     // this will ensure that this task is redone when the versions change.
-    inputs.property "version", project.version
-    inputs.property "mcversion", project.minecraft.version
+	inputs.property "mod_version", mod_version
+	inputs.property "minecraft_version", minecraft_version
 
     // replace stuff in mcmod.info, nothing else
     from(sourceSets.main.resources.srcDirs) {
-        include '**/*.info'
-        expand 'version':"${major_version}.${minor_version}.${patch_version}", 'mcversion':minecraft_version
+        include 'mcmod.info'
+
+        // replace version and mcversion
+        expand 'mod_version':mod_version, 'minecraft_version':minecraft_version
     }
 
     // copy everything else, thats not the mcmod.info
     from(sourceSets.main.resources.srcDirs) {
-        exclude '**/*.info'
+        exclude 'mcmod.info'
     }
 }
-
-version = "${minecraft_version}-${major_version}.${minor_version}.${patch_version}"
 
 jar {
     manifest {
@@ -82,13 +82,4 @@ jar {
     }
 
     classifier = 'universal'
-}
-
-sourceSets {
-    main {
-        java {
-            srcDirs += "src/api/java"
-            exclude 'thaumcraft'
-        }
-    }
 }
