--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,6 @@
 minecraft_version=1.7.10
 forge_version=10.13.4.1448-1.7.10
-major_version=2
-minor_version=4
-patch_version=0
+mod_version=2.3
 mod_group=remoteio
 mod_archive_name=RemoteIO
 mod_info_path=src/main/java/remoteio/common/lib/ModInfo.java
