Gradle updated to 4.4.1 AE2 dependency updated to rv3

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,10 @@ repositories {
         name = "ic2-and-forestry"
         url = "http://maven.ic2.player.to/"
     }
+	ivy {
+        name 'gtnh_download_source'
+        artifactPattern "http://downloads.gtnewhorizons.com/Mods_for_Jenkins/[module]-[revision].[ext]"
+    }
 }
 
 apply plugin: 'forge'
