--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 minecraft_version=1.7.10
-forge_version=10.13.4.1448-1.7.10
+forge_version=10.13.4.1614-1.7.10
 major_version=2
 minor_version=4
 patch_version=0
@@ -11,4 +11,4 @@ CCC_version=1.0.7.47
 NEI_version=1.0.5.118
 WAILA_version=1.5.10
 IC2_version=2.2.782-experimental
-AE2_version=rv2-stable-10
+AE2_version=rv3-beta-22
