--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,20 +1,10 @@
 // Add your dependencies here
 
 dependencies {
-    compileOnly("com.github.GTNewHorizons:waila:master-SNAPSHOT:dev") {
-        transitive = false
-    }
-    compileOnly("com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:master-SNAPSHOT:dev") {
-        transitive = false
-    }
+    compileOnly('com.github.GTNewHorizons:waila:1.5.20:dev') {transitive = false}
+    compileOnly('com.github.GTNewHorizons:Applied-Energistics-2-Unofficial:rv3-beta-82-GTNH:dev') {transitive = false}
 
-    compileOnly("thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev") {
-        transitive = false
-    }
-    compileOnly("net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev") {
-        transitive = false
-    }
-    compileOnly("curse.maven:cofh-lib-220333:2388748") {
-        transitive = false
-    }
+    compileOnly('thaumcraft:Thaumcraft:1.7.10-4.2.3.5:dev') {transitive = false}
+    compileOnly('net.industrial-craft:industrialcraft-2:2.2.828-experimental:dev') {transitive = false}
+    compileOnly('curse.maven:cofh-lib-220333:2388748') {transitive = false}
 }
